{
  "version": 4,
  "terraform_version": "1.8.1",
  "serial": 49,
  "lineage": "834e727f-5b49-f091-f445-3d441891f46c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d94353f7bad10668",
            "arn": "arn:aws:ec2:us-east-1:471112555924:instance/i-0a3ddd8c2df30873c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a3ddd8c2df30873c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-034d2c3dae91c685a",
            "private_dns": "ip-172-31-25-20.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.25.20",
            "public_dns": "ec2-34-229-150-179.compute-1.amazonaws.com",
            "public_ip": "34.229.150.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-051f8868d1f48245f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_TLS"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ff4a5c22c7ecb8e8",
            "tags": {
              "Name": "example-instance"
            },
            "tags_all": {
              "Name": "example-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c819597800fd490c"
            ]
          },
          "dependencies": [
            "module.Security_Groups.aws_security_group.allow_tls",
            "module.Security_Groups.data.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Security_Groups",
      "mode": "data",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112555924:vpc/vpc-01490be2f9279795c",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-03d8400f66c6107e3",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-04a55792623a1b790",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01490be2f9279795c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00ece34eda39a715d",
            "owner_id": "471112555924"
          }
        }
      ]
    },
    {
      "module": "module.Security_Groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112555924:security-group/sg-0c819597800fd490c",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0c819597800fd490c",
            "ingress": [],
            "name": "allow_TLS",
            "name_prefix": "",
            "owner_id": "471112555924",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_TLS"
            },
            "tags_all": {
              "Name": "allow_TLS"
            },
            "timeouts": null,
            "vpc_id": "vpc-01490be2f9279795c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Security_Groups.data.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Security_Groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112555924:security-group-rule/sgr-053c02888c9a9dcbe",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-053c02888c9a9dcbe",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c819597800fd490c",
            "security_group_rule_id": "sgr-053c02888c9a9dcbe",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Security_Groups.aws_security_group.allow_tls",
            "module.Security_Groups.data.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Security_Groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_HTTP_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112555924:security-group-rule/sgr-0de39ec763a3bc666",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0de39ec763a3bc666",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c819597800fd490c",
            "security_group_rule_id": "sgr-0de39ec763a3bc666",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Security_Groups.aws_security_group.allow_tls",
            "module.Security_Groups.data.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Security_Groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112555924:security-group-rule/sgr-04a298abb4028889b",
            "cidr_ipv4": "172.31.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-04a298abb4028889b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c819597800fd490c",
            "security_group_rule_id": "sgr-04a298abb4028889b",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Security_Groups.aws_security_group.allow_tls",
            "module.Security_Groups.data.aws_vpc.my_vpc"
          ]
        }
      ]
    }
  ]
}